<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_schedule" />

    <item
        android:id="@+id/nav_purchases"
        android:icon="@drawable/ic_shopping"
        android:title="@string/nav_purchases" />

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_phone"
        android:title="@string/nav_contact" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>